@@ -313,6 +313,24 @@
 			$chaine_tableaux_page_accueil.="</div>";
 		}
 	}
+	elseif(($_SESSION['statut']=='professeur')&&
+		(getSettingAOui('active_bulletins'))&&
+		((getSettingValue("acces_app_ele_resp")=="manuel")||
+		(getSettingValue("acces_app_ele_resp")=="manuel_individuel"))&&
+		(is_pp($_SESSION['login']))&&
+		(getPref($_SESSION['login'], "accueil_tableau_acces_app_bull_ele_resp", "y")!="n")) {
+
+		// Chemin d'ouverture à revoir...
+		if(getSettingAOui('GepiAccesRestrAccesAppProfP')) {
+			$chaine_tableaux_page_accueil.="<div align='center' style='font-size:xx-small; margin:0.5em;' title=\"Tableau de l'accès parents/élève aux appréciations et avis du conseil de classe.\n\nVous pouvez supprimer cet affichage dans 'Gérer mon compte'.\"><a href='$gepiPath/classes/acces_appreciations.php' title=\"Modifier l'accès aux appréciations et avis.\" style='color:black;'><strong>Tableau de l'accès parents/élève aux appréciations et avis du conseil de classe</strong>&nbsp;<img src='$gepiPath/images/edit16.png' class='icone16' alt='Modifier' /></a>";
+		}
+		else {
+			$chaine_tableaux_page_accueil.="<div align='center' style='font-size:xx-small; margin:0.5em;' title=\"Tableau de l'accès parents/élève aux appréciations et avis du conseil de classe.\n\nVous pouvez supprimer cet affichage dans 'Gérer mon compte'.\"><strong>Tableau de l'accès parents/élève aux appréciations et avis du conseil de classe</strong>";
+		}
+		$chaine_tableaux_page_accueil.=affiche_tableau_acces_ele_parents_appreciations_et_avis_bulletins("pp");
+		$chaine_tableaux_page_accueil.="</div>";
+	}
+
 
 	if((getSettingAOui('abs2_afficher_alerte_nj'))&&(in_array($_SESSION['statut'], array('cpe')))) {
 		// Que pour les CPE pour le moment
